--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -1,1 +1,39 @@
-@import '../../styles/variables.scss'
+@import '../../styles/variables.scss';
+
+.nav {
+    position: fixed;
+    border-bottom: 1px solid black;
+    width: 100%;
+    top: 0;
+    background-color: white;
+
+    .nav__header {
+        max-width: 75%;
+        margin: 0 auto;
+        display: flex;
+        padding: 15px;
+        align-items: center;
+
+        .nav__left{
+            width: 33.333%;
+            text-align: left;
+            padding: 15px;
+        }
+
+        .nav__right{
+            width: 60%;
+            text-align: right;
+        }
+
+        .nav__link{
+            text-decoration: none;
+            margin-left: 3%;
+            text-transform: uppercase;
+            color: black;
+
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+    }
+}
