--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -6,6 +6,7 @@
     width: 100%;
     top: 0;
     background-color: white;
+    font-family: $font-stack;
 
     .nav__header {
         max-width: 75%;
