--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -7,6 +7,7 @@
     top: 0;
     background-color: white;
     font-family: $font-stack;
+    letter-spacing: 1.5px;
 
     .nav__header {
         max-width: 75%;
