--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -36,6 +36,10 @@
             &:hover{
                 text-decoration: underline;
             }
+
+            &:active{
+                font-weight: bold;
+            }
         }
     }
 }
