--- a/src/App.scss
+++ b/src/App.scss
@@ -17,13 +17,18 @@
         color: white;
         font-family: $font-stack;
         letter-spacing: 2px;
+        margin: 50px;
     }
-
 }
 
 .about-section{
     height: 80vh;
     background-color: yellow;
+}
+
+h2 {
+    margin: $h2-margin;
+    text-align: center;
 }
 
 .skills-section{
