--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -20,6 +20,12 @@
             width: 33.333%;
             text-align: left;
             padding: 15px;
+
+            #nav__logo{
+                font-size: 20pt;
+                letter-spacing: 5px;
+                font-weight: bold;
+            }
         }
 
         .nav__right{
