--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,6 @@
 .landing-section {
     height: $section-height;
     background-image: url('../src/assets/images/black.jpeg');
-    overflow: hidden;
 
     .container {
         display: flex;
@@ -13,35 +12,63 @@
     
     .alt {
         position: relative;
-        top: 50px;
+        top: 100px;
         color: white;
         font-family: $font-stack;
-        letter-spacing: 2px;
+        letter-spacing: 5px;
         margin: 50px;
     }
 }
 
-.about-section{
-    height: 80vh;
-    background-color: yellow;
+.about-section {
+    height: 60vh;
+    border-bottom: $border;
+
+    .about__p {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 60%;
+        margin: 0 auto;
+        margin-top: 50px;
+        text-align: center;
+    }
+}
+p {
+    font-size: 20pt;
+    line-height: 3.3rem;
+    font-family: $font-stack;
 }
 
 h2 {
-    margin: $h2-margin;
     text-align: center;
+    font-family: $font-stack;
+    text-transform: $uppercase;
+    padding-top: 50px;
+    letter-spacing: 5px;
 }
 
-.skills-section{
-    height: 70vh;
-    background-color: skyblue;
+.skills-section {
+    height: 60vh;
+    border-bottom: $border;
 }
 
 .projects-section {
     height: $section-height;
-    background-color: yellow;
+    border-bottom: $border;
+}
+
+.resume-section {
+    height: $section-height;
+    border-bottom: $border;
 }
 
 .contact-section {
-    height: $section-height;
-    background-color: skyblue;
+    height: 50vh;
+    background-color: black;
+
+    .contact__h2 {
+        color: white;
+        margin-top: 0;
+    }
 }
