--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,5 @@
 $font-stack: 'Open Sans', sans-serif;
 $section-height: 100vh;
 $h2-margin: 0 auto;
+$border: solid black 1px;
+$uppercase: uppercase;
