increase skills section height

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
     height: $section-height;
     background-image: url('../src/assets/images/black.jpeg');
 
+
     .container {
         display: flex;
         text-align: center;
@@ -12,17 +13,26 @@
     }
     
     .alt {
-        position: relative;
-        top: 100px;
+        // position: relative;
+        // top: 100px;
         color: white;
         font-family: $font-stack;
         letter-spacing: 5px;
         margin: 50px;
+        margin-top: 100px;
+
+        span {
+            color: gray;
+        }
+
+        .title {
+            margin-top: 20px;
+        }
     }
 }
 
 .about-section {
-    height: 60vh;
+    height: 80vh;
     border-bottom: $border;
 
     .about__p {
@@ -31,7 +41,7 @@
         justify-content: center;
         width: 60%;
         margin: 0 auto;
-        margin-top: 20px;
+        margin-top: 50px;
         text-align: center;
     }
 }
@@ -52,7 +62,7 @@ h2 {
 }
 
 .skills-section {
-    height: 60vh;
+    height: 70vh;
     border-bottom: $border;
 
     .icons {
@@ -94,3 +104,4 @@ h2 {
         margin-top: 0;
     }
 }
+
