--- a/src/App.scss
+++ b/src/App.scss
@@ -117,6 +117,11 @@ h2 {
     }
 }
 
+h4 {
+    text-align: center;
+    color: gray;
+}
+
 .contact-section {
     height: 50vh;
     background-color: black;
