--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -25,6 +25,11 @@
                 font-size: 20pt;
                 letter-spacing: 5px;
                 font-weight: bold;
+                text-decoration: none;
+
+                &:active{
+                    color: gray;
+                }
             }
         }
 
