--- a/src/App.scss
+++ b/src/App.scss
@@ -132,11 +132,40 @@ h4 {
         margin-top: 0;
     }
 
+    .contact__icons{
+        display: flex;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 80px;
+        justify-content: center;
+
+    }
+
+    .icon__github {
+        // margin-left: -50px;
+        margin-right: 40px;
+    }
+
+    .icon__linkedin {
+        margin-right: 30px;
+    }
+
+    .icon__envelope {
+        margin-left: 20px;
+    }
+
+    .icon__border-1 {
+        border-right: solid white 1px;
+        margin-right: 30px;
+    }
+
+    .icon__border-2 {
+        border-right: solid white 1px;
+        margin-right: 30px;
+    }
+
+
 }
 
-.icon__github {
-    &:hover{
-        color: grey;
-    }
-}
+
 
