--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 
 .landing-section {
     height: $section-height;
-    background-image: url('../src/assets/images/black.jpeg');
+    background-image: url('../src/assets/images/black.jpg');
 
 
     .container {
@@ -143,7 +143,7 @@ h4 {
 
     .icon__github {
         // margin-left: -50px;
-        margin-right: 40px;
+        margin-right: 30px;
     }
 
     .icon__linkedin {
