--- a/src/App.scss
+++ b/src/App.scss
@@ -107,6 +107,7 @@ h2 {
         justify-content: center;
         margin: 0 auto;
         margin-right: 50px;
+        margin-top: 50px;
         height: 400px;
         width: 600px;
         border: solid black 1px;
@@ -126,8 +127,8 @@ h2 {
         margin-right: 100px;
         justify-content: center;
         text-align: center;
-        font-size: 12pt;
-        line-height: 1;
+        font-size: 16pt;
+        line-height: 2;
     }
 
     .projects__info-2, .projects__info-4 {
