change devicon display to block

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,8 +67,8 @@ h2 {
 
     .icons {
         margin-top: 60px;
-        display: flex;
-        flex-wrap: wrap;
+        display: block;
+        // flex-wrap: wrap;
         text-align: center;
         justify-content: center;
     }
