change nav cursor to pointer

--- a/src/App.scss
+++ b/src/App.scss
@@ -102,7 +102,7 @@ h2 {
     // }
 
 
-        .projects__container-1 {
+        .projects__container-1, .projects__container-3, .projects__container-5 {
             display: flex;
             justify-content: space-evenly;
         }
