--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -43,6 +43,7 @@
             margin-left: 4%;
             text-transform: uppercase;
             color: black;
+            cursor: pointer;
 
             &:hover{
                 text-decoration: underline;
