--- a/src/App.scss
+++ b/src/App.scss
@@ -12,8 +12,6 @@
     }
     
     .alt {
-        // position: relative;
-        // top: 100px;
         color: white;
         font-family: $font-stack;
         letter-spacing: 5px;
@@ -88,40 +86,10 @@ h2 {
     height: 2200px;
     border-bottom: $border;
 
-
-    // .projects__grid-1, .projects__grid-3, .projects__grid-5 {
-    //     display: flex;
-    //     align-items: center;
-    //     justify-content: center;
-    //     margin: 0 auto;
-    //     margin-left: 50px;
-    //     margin-right: 0;
-    //     height: 300px;
-    //     width: 500px;
-    //     border: solid black 1px;
-    // }
-
-
-        .projects__container-1, .projects__container-3, .projects__container-5 {
-            display: flex;
-            justify-content: space-evenly;
-        }
-
-        // .projects__info-1 {
-        //     justify-content: center;
-        // }
-
-    // .projects__grid-2, .projects__grid-4 {
-    //     display: flex;
-    //     align-items: center;
-    //     justify-content: center;
-    //     margin: 0 auto;
-    //     margin-right: 50px;
-    //     margin-top: 50px;
-    //     height: 300px;
-    //     width: 500px;
-    //     border: solid black 1px;
-    // }
+    .projects__container-1, .projects__container-2, .projects__container-3, .projects__container-4, .projects__container-5 {
+        display: flex;
+        justify-content: space-evenly;
+    }
 
     img {
         height: 200px;
@@ -129,27 +97,10 @@ h2 {
         border: solid black 1px;
     }
 
-    // .projects__info-1, .projects__info-3, .projects__info-5 {
-    //     float: right;
-    //     width: 40%;
-    //     height: 40vh;
-    //     margin-top: -300px;
-    //     margin-right: 100px;
-    //     justify-content: center;
-    //     text-align: center;
-    //     font-size: 16pt;
-    //     line-height: 2;
-    // }
-
-    // .projects__info-2, .projects__info-4 {
-    //     width: 30%;
-    //     height: 60vh;
-    //     margin-top: -300px;
-    //     margin-left: 100px;
-    //     justify-content: center;
-    //     text-align: center;
-    //     font-size: 16pt;
-    // }
+    .projects__info-1, .projects__info-2, .projects__info-3, .projects__info-4, .projects__info-5 {
+        width: 50%;
+        text-align: center;
+    }
 }
 
 h4 {
