--- a/src/App.scss
+++ b/src/App.scss
@@ -89,6 +89,7 @@ h2 {
     .projects__container-1, .projects__container-2, .projects__container-3, .projects__container-4, .projects__container-5 {
         display: flex;
         justify-content: space-evenly;
+        margin-top: 20px;
     }
 
     img {
